force-app/main/default/objects/API_Field__c/API_Field__c.object-meta.xml
<CustomObject>
    <label>API Field</label>
    <nameField>
        <displayFormat>AF-{0000000}</displayFormat>
        <label>API Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>