force-app/main/default/objects/API_Field__c/fields/Api_Object__c.field-meta.xml
<CustomField>
    <fullName>Api_Object__c</fullName>
    <label>Api Object</label>
    <referenceTo>API_Object__c</referenceTo>
    <relationshipLabel>API Fields</relationshipLabel>
    <relationshipName>API_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>