force-app/main/default/objects/API_Field__c/fields/Json_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Json_Attribute__c</fullName>
    <label>Json Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>