force-app/main/default/objects/API_Field__c/fields/Parent_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship_Name__c</fullName>
    <label>Parent Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>